added some test and updated fxutilities class to handle context class reading from config file